--- a/index.html
+++ b/index.html
@@ -115,7 +115,12 @@
         </div>
 
         <!-- Estrellas Restantes -->
-        <p><span data-lang="remainingStarsText">Estrellas restantes:</span> <span id="estrellasRestantes">0</span></p>
+        <div class="stars-reset-container">
+            <p><span data-lang="remainingStarsText">Estrellas restantes:</span> <span id="estrellasRestantes">0</span></p>
+            <button id="resetButton">Reset</button>
+        </div>
+        
+
     </div>
 
 
