github logo with link to repo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <div class="container">
         <!-- Contenedor para el logo, botón de cálculo y la selección de idioma en la misma fila -->
         <div class="header">
+            <div class="github-logo">
+                <a href="https://github.com/Natxo09/star-calculator-cs2" target="_blank">
+                    <img src="https://img.icons8.com/ios-filled/250/FFFFFF/github.png" alt="GitHub Logo">
+                </a>
+            </div>
             <div class="logo">
                 <img src="img/logo_cs_sm.svg" alt="Logo CS2">
             </div>
