--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
                 </a>
             </div>
             <div class="logo">
-                <img src="img/logo_cs_sm.svg" alt="Logo CS2">
+                <a href="https://store.steampowered.com/sale/armory" target="_blank">
+                    <img src="img/logo_cs_sm.svg" alt="Logo CS2">
+                </a>
+
             </div>
             <div class="language-selector">
                 <label for="language"></label>
@@ -170,7 +173,7 @@
     <!-- Footer -->
     <footer>
         <p>
-            Made by <a href="https://twitch.tv/natxo" target="_blank">Natxo</a> with ❤️ for my gamblers (no commercial use allowed).
+            Made by <a href="https://twitch.tv/natxo" target="_blank">Natxo</a> with ❤️ for my gamblers.
         </p>
     </footer>
     
